minor layout changes

--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -258,8 +258,8 @@ data-ad-slot="5275186684">
   <br>Tôi bắt đầu mua cổ phiếu CII từ năm 2002, giữ nguyên số lượng cổ phiếu đến khi CII lên sàn. Năm 2006 thì tôi bán gần hết để dùng tiền vào việc khác, lời 185%, từ 50 triệu đồng thu lại hơn 140 triệu đồng. Thời gian 2003-2006, tôi chỉ đưa thêm một ít tiền vào cổ phiếu trên sàn, mặc dù không chạy theo đám đông nhưng cũng không ít lần tâm lý dao động nên mua bán không đúng lúc và mua phải những cổ phiếu không tốt, đến năm 2006 thì tôi bán gần hết để dùng tiền vào việc khác. Kết quả của giai đoạn này lời khoảng 77%.
   <br>Từ năm 2008, tôi bắt đầu đưa tiền trở lại mua cổ phiếu, vẫn không có kiến thức đầy đủ. Theo lời khuyên của một người bạn, tôi mua cổ phiếu của Eximbank, thỉnh thoảng có mua thêm và không bán ra cho tới lúc này (năm 2012). Theo cảm tính, tôi mua cổ phiếu của Vinamilk, thời gian đầu có bán ra do tâm lý dao động, sau đó chỉ mua thêm và không bán nữa. Từ tháng 7/2011, tôi bắt đầu mua vào cổ phiếu Sacombank, chỉ mua từng chút, không bán ra.
   <br>Kết quả tới nay (2012) tôi lời 114% trên số cổ phiếu Eximbank, lời 79% trên số cổ phiếu Sacombank, lời 94% trên số cổ phiếu Vinamilk.
-  <br>Số liệu mới của năm 2016: lợi nhuận trung bình khi đầu tư các cổ phiếu: VNM 36,33%/năm, KDC 12,8%/năm, HAG -22,8%/năm, MSN -6%/năm, CII 32,75%/năm, SAV 4,6%/năm, GMD 50,27%/năm, AGF 17,42%/năm, REE 29,06%/năm, VF1 5,83%/năm, EIB 19,73%/năm, STB 29,26%/năm, MBB 7,85%/năm.
-  <br>Mặc dù tỉ lệ lợi nhuận từ các cổ phiếu đó khá cao nhưng do không đủ tự tin nên tôi không dám đưa nhiều tiền vào đó, lợi nhuận tính thành tiền không nhiều. Từ năm 2016 tôi đã bán cổ phiếu dần dần để chuyển vào quỹ đầu tư của VFM. Hiện nay năm 2021, cổ phiếu chỉ chiếm khoảng 0,5% tổng tài sản của tôi, các quỹ đầu tư chiếm gần 40% tổng tài sản, một phần nhỏ nằm trong các hợp đồng bảo hiểm, phần lớn còn lại là căn nhà đang cho thuê.</p>
+  <br>Số liệu mới của năm 2016: lợi nhuận trung bình khi đầu tư các cổ phiếu: VNM 36,33%/năm, KDC 12,8%/năm, HAG -22,8%/năm, MSN -6%/năm, CII 32,75%/năm, SAV 4,6%/năm, GMD 50,27%/năm, AGF 17,42%/năm, REE 29,06%/năm, VF1 5,83%/năm, EIB 19,73%/năm, STB 29,26%/năm, MBB 7,85%/năm.</p>
+  <p>Mặc dù tỉ lệ lợi nhuận từ các cổ phiếu đó khá cao nhưng do không đủ tự tin nên tôi không dám đưa nhiều tiền vào đó, lợi nhuận tính thành tiền không nhiều. Từ năm 2016 tôi đã bán cổ phiếu dần dần để chuyển vào quỹ đầu tư của VFM. Hiện nay năm 2021, cổ phiếu chỉ chiếm khoảng 0,5% tổng tài sản của tôi, các quỹ đầu tư chiếm gần 40% tổng tài sản, một phần nhỏ nằm trong các hợp đồng bảo hiểm, phần lớn còn lại là căn nhà đang cho thuê.</p>
   <p>Từ kinh nghiệm của mình, tôi tin rằng ba điều ở trên đầu bài là đúng. Tôi cho rằng mình thật may mắn khi không có đủ kiến thức mà lời từ các cổ phiếu EIB, VNM, STB. Sắp tới tôi sẽ tăng tỉ lệ tiền đặt vào quỹ đầu tư để:</p>
   <ul>
     <li>không phụ thuộc nhiều vào yếu tố may mắn nữa</li>
@@ -267,9 +267,9 @@ data-ad-slot="5275186684">
     <li>dễ dàng tối đa hoá lợi nhuận</li>
     <li>có thể rút tiền ra bất kỳ lúc nào (dễ hơn bán cổ phiếu)</li>
   </ul>
-  <p>Tất cả các con số trong bài này được lấy từ các báo cáo của chương trình <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> trên số liệu của gia đình tôi.
-  <br>Ngoài bất động sản và cổ phiếu ra còn có những cách khác để ích luỹ dài hạn. Các cách đó được <a href="tich-luy-dai-han">so sánh trong bài viết ở đây</a>.
-  <br>Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
+  <p>Tất cả các con số trong bài này được lấy từ các báo cáo của chương trình <a href="/kinh-nghiem/may-tinh/gnucash">gnucash</a> trên số liệu của gia đình tôi.</p>
+  <p>Ngoài bất động sản và cổ phiếu ra còn có những cách khác để ích luỹ dài hạn. Các cách đó được <a href="tich-luy-dai-han">so sánh trong bài viết ở đây</a>.</p>
+  <p>Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
 
 
 
