--- a/huu-ich/hieu-qua-dau-tu.html
+++ b/huu-ich/hieu-qua-dau-tu.html
@@ -263,7 +263,7 @@ data-ad-slot="5275186684">
 
 
   <p>P.S.
-  <br>Có thể dùng hàm XIRR để tính tốc độ gia tăng tài sản của các hợp đồng <a href="cac-loai-bao-hiem/">bảo hiểm nhân thọ</a>. Ví dụ hợp đồng bảo hiểm giáo dục có thời hạn từ khi đứa bé chưa đầy tuổi đến năm 22 tuổi, đóng phí 18 năm, để lại mọi khoản <a href="cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">bảo tức định kỳ</a> và phiếu tiền mặt để sinh lời, khi đáo hạn hợp đồng rút toàn bộ số tiền sẽ lời trung bình 6,57%/năm. Mức sinh lời đó khá tốt, gần bằng mức gửi tiết kiệm, lại được bảo hiểm nhiều quyền lợi về bệnh nghiêm trọng, trợ cấp nằm viện, miễn nộp phí và trợ cấp hàng năm khi người mua bảo hiểm qua đời.
+  <br>Có thể dùng hàm XIRR để tính tốc độ gia tăng tài sản của các hợp đồng <a href="cac-loai-bao-hiem/">bảo hiểm nhân thọ</a>. Ví dụ hợp đồng bảo hiểm giáo dục của con tôi có thời hạn từ khi đứa bé chưa đầy ba tuổi đến năm 18 tuổi, đóng phí 15 năm, để lại mọi khoản <a href="cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">bảo tức định kỳ</a> để sinh lời, khi đáo hạn hợp đồng rút toàn bộ số tiền sẽ lời trung bình 5,37%/năm. Mức sinh lời đó thấp hơn gửi tiết kiệm vì phải tốn chi phí bảo hiểm các rủi ro.
   <br>Trong thực tế thì tôi thường rút bảo tức và phiếu tiền mặt ra dùng, việc này làm giảm mức sinh lời trung bình của hợp đồng bảo hiểm, nhưng xét hiệu quả chung của việc tích luỹ thì vẫn tốt vì khi rút tiền từ hợp đồng bảo hiểm tôi tránh được việc rút tiền từ các kênh đầu tư khác có lợi nhuận cao hơn, tức là tài sản của tôi tăng lên nhanh hơn.</p>
 
   <div class="todiscuss">
