--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -254,7 +254,8 @@ data-ad-slot="5275186684">
   <h2>Tại sao cần lập kế hoạch tài chính?</h2>
   <div class="flright"><amp-img alt="Lộ trình tài chính" src="/images/KHTCp1.png" width="600" height="371" layout="responsive"></amp-img></a></div>
   <p>Trong cuộc đời mỗi người, mỗi gia đình đều có những lúc dùng đến một món tiền lớn. Những món tiền cần có đó lớn đến mức bất ngờ nhưng ít người để ý đến nó, như là tiền cho con học đại học tốt để bước vững chắc vào đời, tiền để sống khi về già… Nếu không có kế hoạch chuẩn bị những món tiền đó, gia đình sẽ lâm vào cảnh thiếu hụt, cuộc sống không ổn định.
-  <br style="clear:both">Rất nhiều người chưa hề nghĩ đến việc tiết kiệm đều đặn; có bao nhiêu tiền dùng hết bấy nhiêu; thậm chí dùng nhiều hơn số tiền có trong túi nên thường xuyên túng thiếu trước ngày lãnh lương.
+  <br style="clear:both"></p>
+  <p>Rất nhiều người chưa hề nghĩ đến việc tiết kiệm đều đặn; có bao nhiêu tiền dùng hết bấy nhiêu; thậm chí dùng nhiều hơn số tiền có trong túi nên thường xuyên túng thiếu trước ngày lãnh lương.
   <br>Một số ít người có khá hơn: có tháng dư tiền, có tháng hết tiền; số tiền dư đó không biết để làm gì nên thỉnh thoảng đổi điện thoại, đổi xe cho hết tiền. Sống như vậy tuy trước mắt không túng thiếu như trên nhưng sẽ gặp khó khăn khi về già sau 25-30 năm.
   <br>Rất ít người có kế hoạch để dành tiền ngắn hạn, ví dụ như năm nay phải để dành được 50 triệu, hoặc năm năm nữa có 300 triệu để đặt tiền mua nhà trả góp…
   <br>Rất rất ít người có kế hoạch để dành tiền dài hạn như là để một tỉ đồng sau 15 năm cho con du học, để 10 tỉ đồng sau 30 năm để về già sống thảnh thơi. Người ta thường bối rối trước những kế hoạch dài hạn như vậy vì thời gian quá dài, lạm phát, lãi suất thay đổi…
