--- a/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
+++ b/huu-ich/ke-hoach-tai-chinh/ke-hoach.html
@@ -262,7 +262,7 @@ tổng số tiền cần tiết kiệm mỗi năm được tính trong ô I54.</
 <p>Nếu thị trường cho thuê nhà phát triển tốt, ở nhà thuê còn tiện hơn ở nhà của mình là không phải lo sửa chữa, khi nào nhà cũ thì chuyển sang thuê nhà khác. Tiện nhất là khi thuê nhà có sẵn giường-tủ-bàn-ghế, chỉ cần mang quần-áo-chăn-màn-máy-tính-tv vào ở. Suy cho cùng thì chi phí và điều kiện sống trong nhà quan trọng hơn là quyền sở hữu căn nhà. Khi mình ở trong căn nhà của mình thì mình đã tốn một khoản gọi là chi phí cơ hội trên giá trị căn nhà.</p>
 </blockquote>
 <p>Một việc vô cùng quan trọng nữa là <a href="bao-ve">bảo vệ kế hoạch tài chính</a> của bạn.</p>
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
 
