--- a/huu-ich/ke-hoach-tai-chinh/no-m-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/no-m-co-dinh.html
@@ -193,7 +193,7 @@ thì bạn cần khoảng 10 năm để trả hết nợ.</p>
 suất vay vào ô B3, số tiền góp hàng tháng vào ô B4.
 Chương trình sẽ tính ra số năm phải góp trong ô B5.</p>
 <p><i>Khi số tiền góp B4 quá nhỏ so với số nợ B2, chương trình có thể báo lỗi khi tính ra số năm trả góp chừng 20 năm trở lên.</i></p>
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
