--- a/huu-ich/ke-hoach-tai-chinh/no-t-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/no-t-co-dinh.html
@@ -195,7 +195,7 @@ tiền nợ vào ô B3, lãi suất vay vào ô B4. Chương trình
 sẽ tính ra số tiền phải góp hàng tháng trong ô B5.</p>
 <p><i>Vay với lãi suất trên dư nợ giảm dần là tiền lãi sẽ giảm dần sau mỗi kỳ bạn trả góp. Ví dụ bạn trả góp hàng tháng thì mỗi tháng trả góp bạn phải trả toàn bộ lãi trong tháng qua và trả một phần nợ gốc; tháng sau số tiền lãi giảm xuống do gốc đã giảm một phần và bạn trả được phần gốc nhiều hơn tháng trước.</i></p>
 <p><i>Khác với dư nợ giảm dần là dư nợ ban đầu. Tiền lãi trong mỗi kỳ trả góp không giảm dần, do đó tiền gốc trả được trong mỗi kỳ cũng không tăng dần.</i></p>
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
