--- a/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap.html
+++ b/huu-ich/ke-hoach-tai-chinh/tang-thu-nhap.html
@@ -228,7 +228,7 @@ Làm sao để tìm được đối tác tin cậy mà hùn vốn? Nên mua cổ
 <blockquote>Trước khi hùn vốn, bạn phải đánh giá khả năng thành công của kế hoạch kinh doanh, độ tin cậy của đối tác. Nếu không thể tự mình đánh giá được, bạn có thể giao vốn của mình cho các quỹ đầu tư chuyên nghiệp, uy tín. <b><a href="../dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a></b> với số vốn rất lớn, phân bổ vào nhiều dự án khác nhau để giảm nguy cơ thua lỗ, có bộ phận chuyên môn để đánh giá kỹ lưỡng từng dự án, bảo đảm đem lại lợi nhuận tốt trong dài hạn.</blockquote>
 </div>
 
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
 
