--- a/huu-ich/ke-hoach-tai-chinh/thu-chi.html
+++ b/huu-ich/ke-hoach-tai-chinh/thu-chi.html
@@ -247,7 +247,7 @@ hàng tuần thì ghi lương quy về tháng vào ô F34. Nếu bạn buôn bá
 
 
 <p>Sau khi liệt kê thu nhập và chi phí xong, bạn sẽ tính các khoản tiền cần dùng trong tương lai, bắt đầu là tính tiền <a href="huu-tri">hưu trí</a>.</p>
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
