--- a/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/tk-m-co-dinh.html
@@ -200,7 +200,7 @@ có đủ số tiền cần có.</p>
 mua ngay lúc này thì bạn có thể dùng trang tính <b>Nợ-M-cố-định</b> để tính xem bạn sẽ trả nợ trong bao lâu.
 Hoặc trang tính <b>Nợ-T-cố-định</b> để tính xem mỗi
 tháng bạn phải trả góp bao nhiêu tiền nợ.</p>
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
