--- a/huu-ich/lam-giau-khong-kho.html
+++ b/huu-ich/lam-giau-khong-kho.html
@@ -243,8 +243,8 @@ data-ad-slot="5275186684">
   </div>
   <p>Đó là cách <i>làm giàu chậm</i>, chậm nhưng chắc chắn, không lo thất bại, không phải trả giá cho bài học thương trường nào hết, không cần tìm cơ hội, và không cần chờ may mắn. <b>Mọi người đều có thể làm giàu chậm</b>, đây không phải là câu khích lệ suông mà là một hướng dẫn rõ ràng cho mọi người.
   <br>Làm giàu theo cách này, bạn sẽ thấy tài sản của mình tăng dần theo năm tháng. Đây chính là điều quan trọng nhất trong việc làm giàu. Những người có thu nhập cao cũng phải kiểm soát kỹ sao cho tài sản tăng dần lên thì mới giàu được.
-<br style="clear:both">
-  Làm thế nào để một số tiền nhỏ sinh lợi 12%-15%/năm trong khi gửi tiết kiệm ở ngân hàng chỉ được 8%-8,5%/năm? Đó là dùng những công cụ tài chính hiện đại: <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>.</p>
+  <br>Làm thế nào để một số tiền nhỏ sinh lợi 12%-15%/năm trong khi gửi tiết kiệm ở ngân hàng chỉ được 8%-8,5%/năm? Đó là dùng những công cụ tài chính hiện đại: <a href="dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>.
+  <br style="clear:both"></p>
 
 
   <p>Người xưa nói "Đại phú do thiên, tiểu phú do cần" nghĩa là có may mắn thì giàu lớn, cần cù tiết kiệm thì giàu nhỏ. Trong khi làm giàu chậm một cách chắn chắn, nếu may mắn bạn vẫn có thể làm giàu nhanh, càng hay. Mặt khác, người giàu cũng có thể dùng quỹ đầu tư để <a href="tich-luy-dai-han">cất giữ tài sản</a> an toàn và sinh lợi.</p>
