--- a/huu-ich/nghi-luc.html
+++ b/huu-ich/nghi-luc.html
@@ -232,7 +232,7 @@ data-ad-slot="5275186684">
     <h2>Nghị lực để lập kế hoạch ngân sách</h2>
     <div class="flright"><amp-img alt="Ghi sổ" src="/images/bookkeeping.jpeg" width="1200" height="800" layout="responsive"></amp-img></div>
     <p>Trong cuộc khảo sát năm 2019 của Debt.com, chỉ có 25% người đồng ý với việc "mọi người đều nên có kế hoạch ngân sách" trong khi kế hoạch ngân sách là điều quan trọng nhất để quản lý tiền được tốt, theo các chuyên gia tài chính cá nhân, vì bạn phải để tâm vào việc tiêu tiền trước khi bạn có thể thay đổi.
-    <br style="clear:both">Thật không may là lập kế hoạch ngân sách thì rất chán. Và khi bạn chưa có một bộ công cụ thì bạn sẽ tốn rất nhiều thời gian để lập kế hoạch ngân sách. Bạn sẽ cảm thấy dễ dàng chọn ngồi xem phim thay vì dò lại những khoản chi tiêu.</p>
+    <br style="clear:both">Thật không may là lập kế hoạch ngân sách thì rất chán. Và khi bạn chưa có một bộ công cụ thì bạn sẽ tốn rất nhiều thời gian để lập <a href="ke-hoach-tai-chinh/">kế hoạch ngân sách</a>. Bạn sẽ cảm thấy dễ dàng chọn ngồi xem phim thay vì dò lại những khoản chi tiêu.</p>
     <p>Bạn có thể vượt qua khó khăn trong việc lập kế hoạch ngân sách bằng cách chia nhỏ việc đó. Thay vì cố gắng làm hết trong một lần, bạn để mỗi ngày 15 phút để làm dần. Bắt đầu bằng việc ghi thu nhập, tiếp theo là xem lại những giao dịch qua tài khoản, phân loại chúng thành nhóm quan trọng, nhóm không quan trọng, nhóm trả nợ. Sau đó, bạn sẽ xem kỹ nhóm không quan trọng xem bạn có thể thay đổi được gì.</p>
 
 
