--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -375,7 +375,7 @@ data-ad-slot="5275186684">
   </ul>
 
 
-  <p>Thực tế thì thu nhập thường tăng từ từ theo thời gian, đôi khi có thể giảm đột ngột; còn chi tiêu thì cũng  tăng từ từ theo thời gian nhưng đôi khi lại tăng đôt ngột. Khi lập gia đình, có con thì chi tiêu sẽ tăng đáng kể trong một khoảng thời gian dài hơn 20 năm.
+  <p>Thực tế thì thu nhập thường tăng từ từ theo thời gian, đôi khi có thể giảm đột ngột; còn chi tiêu thì cũng  tăng từ từ theo thời gian nhưng đôi khi lại tăng đột ngột. Khi lập gia đình, có con thì chi tiêu sẽ tăng đáng kể trong một khoảng thời gian dài hơn 20 năm.
   <br>Do đó kết quả tính toán đơn giản trên đây chưa đủ an toàn, cần phải tiết kiệm nhiều hơn mới đủ an toàn.
   <br>Trong các tính toán trên, phải kể luôn các khoản thu nhập dạng trợ cấp mà bạn tiêu hết ngay ví dụ như ở chung nhà với người thân thì bạn được giảm bớt tiền nhà và tiền ăn. Cũng nên nhớ rằng không được tính các khoản lợi nhuận từ tài sản tiết kiệm vào thu nhập.</p>
   <p>Cột thứ hai là kết quả tính cho trường hợp giả định không bao giờ có trong thực tế: trượt giá 0%. Ngay cả khi không trượt giá, bạn vẫn phải tiết kiệm từ một phần tư tới một nửa thu nhập để làm quỹ hưu trí cho chính mình.</p>
