--- a/huu-ich/ke-hoach-tai-chinh/bao-ve.html
+++ b/huu-ich/ke-hoach-tai-chinh/bao-ve.html
@@ -254,7 +254,7 @@ Hoặc bạn đang tích luỹ theo đúng <a href="../ke-hoach-tai-chinh/">kế
   Các bài liên quan:
   <br>* <a href="../cac-loai-bao-hiem/">Các loại bảo hiểm</a>
 
-  <div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+  <div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
   <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
   <hr>
   <div class="footer">
