--- a/huu-ich/ke-hoach-tai-chinh/tk-t-co-dinh.html
+++ b/huu-ich/ke-hoach-tai-chinh/tk-t-co-dinh.html
@@ -244,7 +244,7 @@ tiết kiệm/đầu tư. Ô <b>B9</b> là trị giá các tài sản có thể 
 cần phải để dành mỗi tháng, kết quả ghi trong ô <b>B10</b>. Số tiền tiết kiệm <b>B10</b> phải tăng dần theo độ trượt giá hàng năm để chống lại <a href="../lam-phat-loi-song">lạm phát lối sống</a>.</p>
 <p>Ô B12 sẽ cho biết bạn cần có ngay bao nhiêu tiền vào lúc này để sinh ra số tiền B5 với lãi suất B8.
 </p>
-<div class="center">trở về trang <a href="../ke-hoach-tai-chinh/">Kế hoạch tài chính</a></div>
+<div class="center">trở về trang <a href="khtc1">Kế hoạch tài chính</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132799550911987712" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/375551315943816" rel="nofollow" target="_blank">Facebook</a></div>
 
 
