--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -518,7 +518,7 @@ Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) ngh
   <h3 id="bao-hiem">Các khoản chi để được bảo hiểm</h3>
   <p>Chúng ta cần chi một ít tiền để bảo đảm có tiền tiếp tục thực hiện những kế hoạch trên khi có rủi ro bất ngờ xảy ra như tai nạn, bệnh nghiêm trọng… <span class="tmark">Tổng số tiền bảo hiểm cần có phải lớn hơn tổng các mục tiêu tài chính chưa hoàn thành trừ đi tổng tài sản đầu tư đang có.</span>
   <br>Những người làm ra tiền trong gia đình là những người cần được bảo hiểm trước tiên.
-  <br>Số tiền đóng bảo hiểm nên được xem như là chi phí hơn là số tiền tích luỹ cho tương lai. Sản phẩm bảo hiểm nên dùng là loại bảo hiểm có số tiền bảo hiểm cao và mức phí thấp như <a href="../cac-loai-bao-hiem/bhnt-lien-ket-chung">bảo hiểm nhân thọ liên kết chung</a>, số tiền bảo hiểm cao gấp hàng ngàn lần số tiền đóng phí hàng tháng.</p>
+  <br>Số tiền đóng bảo hiểm nên được xem như là chi phí hơn là số tiền tích luỹ cho tương lai. Sản phẩm bảo hiểm nên dùng là loại bảo hiểm có số tiền bảo hiểm cao và mức phí thấp như <a href="../cac-loai-bao-hiem/bhnt-lien-ket-chung">bảo hiểm nhân thọ liên kết chung</a>, số tiền bảo hiểm cao gấp hàng ngàn lần số tiền đóng phí hàng tháng. Nên yêu-cầu đại-lý bảo-hiểm thiết-kế hợp-đồng có giá-trị hoàn-lại thấp để giảm mức phí đóng và thời-gian đóng phí.</p>
 
   <h3 id="chu-y">Chú ý</h3>
   <p>Bạn nên bắt đầu lập kế hoạch với các mục tiêu nhỏ, dễ thực hiện; và nâng các mục tiêu lên cao hơn sau một thời gian thực hiện. Ví dụ: bắt đầu với mục tiêu mua nhà nhỏ ở xa trung tâm, cho con học đại học công.</p>
@@ -540,6 +540,7 @@ Dòng nào để trống hoặc ghi zero ở cột C (Số tiền cần có) ngh
     <li>Xô tiền quỹ đầu tư cổ phiếu hoặc bất động sản đựng số tiền cho thời gian xa hơn năm năm, quỹ đầu tư cổ phiếu cần có thời gian đủ dài để sinh lời ổn định.</li>
   </ol>
   <p>Các xô tiền đó sinh lời ở các mức khác nhau. Nếu bạn đang tích luỹ tiền cho mục tiêu gần hơn năm năm thì bạn gửi tiền vào xô thứ hai và bạn không thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>. Nếu bạn đã tích luỹ đủ cho những mục tiêu gần hơn năm năm thì bạn hãy chuyển số tiền sắp dùng cho những mục tiêu đó vào xô thứ hai và tiếp tục gửi tiền vào xô thứ ba và bạn có thể nhập mức sinh lời cao vào ô B7 trong trang <a href="#tt-chung">TT-chung</a>.
+  <br>Trong giai-đoạn đầu của cuộc đời, có khá nhiều mục-tiêu gần hơn năm năm nên bạn không thể chọn mức sinh lời cao khi lập kế hoạch, vì vậy tỷ-lệ tích-luỹ sẽ tăng lên, chi-tiêu sẽ giảm xuống trong giai-đoạn đó. Khi qua giai-đoạn có nhiều mục-tiêu gần như vậy, bạn điều chỉnh kế-hoạch với mức sinh lời cao thì tỷ-lệ tích-luỹ sẽ giảm xuống. Để tỷ-lệ tích-luỹ bớt chênh-lệch giữa hai giai-đoạn, bạn có thể lập kế hoạch ban-đầu với tuổi về-hưu cao hơn dự-định; sau khi đã qua giai-đoạn đầu, bạn điều-chỉnh kế-hoạch với mức sinh lời cao và tuổi về-hưu thấp hơn.</p>
 
 
 
