--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -258,9 +258,9 @@ data-ad-slot="5275186684">
   <p>Rất nhiều người chưa hề nghĩ đến việc tiết kiệm đều đặn; có bao nhiêu tiền dùng hết bấy nhiêu; thậm chí dùng nhiều hơn số tiền có trong túi nên thường xuyên túng thiếu trước ngày lãnh lương.
   <br>Một số ít người có khá hơn: có tháng dư tiền, có tháng hết tiền; số tiền dư đó không biết để làm gì nên thỉnh thoảng đổi điện thoại, đổi xe cho hết tiền. Sống như vậy tuy trước mắt không túng thiếu như trên nhưng sẽ gặp khó khăn khi về già sau 25-30 năm.
   <br>Rất ít người có kế hoạch để dành tiền ngắn hạn, ví dụ như năm nay phải để dành được 50 triệu, hoặc năm năm nữa có 300 triệu để đặt tiền mua nhà trả góp…
-  <br>Rất rất ít người có kế hoạch để dành tiền dài hạn như là để một tỉ đồng sau 15 năm cho con du học, để 10 tỉ đồng sau 30 năm để về già sống thảnh thơi. Người ta thường bối rối trước những kế hoạch dài hạn như vậy vì thời gian quá dài, lạm phát, lãi suất thay đổi…
+  <br>Rất rất ít người có kế hoạch để dành tiền dài hạn như là để một tỉ đồng sau 15 năm cho con du học, để 10 tỉ đồng sau 30 năm để về già sống thảnh thơi.
   <br>Không có kế hoạch tài chính dài hạn thì người ta sẽ không biết bao giờ sẽ dùng số tiền đang có, và sẽ không dám đem số tiền đó <a href="../tich-luy-dai-han">đầu tư dài hạn để được lợi nhuận cao</a>.</p>
-  <p>Trang web này giúp mọi người giải quyết những khó khăn đó, tính ra một kế hoạch để biến những món tiền nhỏ mỗi ngày thành những món tiền rất lớn.
+  <p>Người ta thường bối rối khi tính những kế hoạch dài hạn vì thời gian quá dài, lạm phát, lãi suất thay đổi… Trang web này giúp mọi người giải quyết những khó khăn đó, tính ra một kế hoạch để biến những món tiền nhỏ mỗi ngày thành những món tiền rất lớn.
   <br>Lập kế hoạch tài chính từ sớm để <b>chắc chắn</b> có đủ tiền sống đến hết đời.</p>
   <p>Đây là <strong>phiên bản 2.1</strong> của bản hướng dẫn lập kế hoạch tài chính (<a href="khtc1">bản 1.0</a> đã được phát hành năm 2012). Phiên bản mới dễ dùng hơn, tính đến những hoạt động tài chính thường gặp, và cho kết quả dễ thực hiện hơn. Phiên bản mới vẽ ra lộ trình tích luỹ tài sản trong suốt cuộc đời mỗi người hay mỗi gia đình với hai file công cụ tính cho hai giai đoạn tài chính của đời người:</p>
   <ol>
