--- a/download/index.html
+++ b/download/index.html
@@ -255,7 +255,7 @@ Nhấn nút phải của chuột và chọn chép về để dùng.
 <td>213 KB</td>
 </tr>
 <tr>
-<td><a href="http://download.lhboi.name.vn/VNTD-KTTD/" target='_blank'>Việt Nam Tự Điển</a></td>
+<td><a href="VNTD-KTTD/" target='_blank'>Việt Nam Tự Điển</a></td>
 <td>Việt Nam Tự Điển của Hội Khai Trí Tiến Đức</td>
 <td></td>
 </tr>
