--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
         <div class="lrsp">
           <a href="kinh-nghiem/may-tinh/pi-network"><amp-img src="images/pi-network_ex.jpg" layout="responsive" width="350" height="233" alt="Pi"></amp-img></a>
           <div class="center"><h3>Tiền-mật-mã Pi</h3></div>
-          <p>Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">tiền-mật-mã cho mọi người: Pi</a>.
-          <br>Một loại tiền-mật-mã mà mọi người trên toàn thế-giới đều dùng được một cách dễ-dàng.
+          <p>Giới-thiệu <a href="kinh-nghiem/may-tinh/pi-network">Pi: tiền-mật-mã cho mọi-người</a>.
+          <br>Một loại tiền-mật-mã mà mọi-người trên toàn thế-giới đều dùng được một cách dễ-dàng.
           </p>
         </div>
       </div>
