--- a/kinh-nghiem/linh-tinh/lau-nha.html
+++ b/kinh-nghiem/linh-tinh/lau-nha.html
@@ -283,6 +283,7 @@ data-ad-slot="5275186684">
 <p>Tôi đã lau-nhà từ hơn 40 năm trước. Hồi-đó lau-nhà tốn nhiều sức hơn bây-giờ vì chưa có dụng-cụ thích-hợp. Hồi-đó, dụng-cụ lau-nhà chỉ có mảnh giẻ-lau và xô nước, giẻ-lau thường là mảnh quần áo cũ. Mỗi lần lau-nhà thì hứng một xô chừng 15-20 lít nước, xách tới nơi cần lau, nhúng giẻ-lau vào xô cho ướt, vắt bằng tay cho bớt nước, ngồi xổm xuống dùng tay lau quanh chỗ ngồi, rồi nhích dần qua chỗ khác. Tuỳ-theo nền-nhà dơ nhiều hay ít, lau được khoảng 10-15 mét vuông thì đem giẻ-lau nhúng vào xô, xả cho bớt dơ rồi lau tiếp, xả chừng hai lần như vậy thì đổ xô nước đục đi, hứng xô nước mới. Lau theo kiểu này thì mọi chỗ không sạch đều như nhau vì có chỗ được lau bằng giẻ nhúng nước mới, có chỗ được lau bằng giẻ nhúng nước hai, nước ba. Thường thì phải lau lại một lượt nữa, tốn nhiều sức gấp đôi.</p>
 <p>Từ hơn hai chục năm nay nhiều kiểu dụng-cụ lau-nhà đã có ở Việt-Nam và có nước-lau-sàn nữa.</p>
 <h2>Các kiểu cây-lau-nhà</h2>
+<h3>Cây-lau-nhà ly-tâm</h3>
 <div class="flright"><amp-img alt="cây-lau-nhà ly-tâm" src="/images/cay-lau-ly-tam.webp" width="400" height="400" layout="responsive"></amp-img></div>
 <p>Thường gặp nhất là kiểu cây-lau-nhà đầu tròn, vắt nước bằng ly-tâm.
 <br>Giẻ-lau trong cây-lau-nhà này là những sợi vải bện lại rồi gắn lên một vành nhựa tròn, vành nhựa đó được gắn khớp cố-định lên một đĩa nhựa, đĩa nhựa này được gắn vào cán cây-lau-nhà qua một khớp-bản-lề để cho cán cây-lau-nhà có thể nghiêng tuỳ-ý so với sàn-nhà. Cán cây-lau-nhà gồm hai đoạn ống kim-loại lồng vào nhau, khi ấn đoạn trên xuống thì đoạn dưới vừa xoay vừa lồng sâu vào đoạn trên, chuyển-động-xoay làm nước thấm trong giẻ-lau bị ly-tâm.
@@ -290,6 +291,18 @@ data-ad-slot="5275186684">
 <br>Cách thứ nhất: để cây-lau-nhà thẳng đứng với các sợi vải xoè trên mặt đất, đạp một chân lên các sợi vải ở một đầu của bản-lề của đĩa nhựa rồi từ-từ nghiêng cây-lau-nhà theo hướng trục bản lề từ thế thẳng đứng đến thế nằm ngang sao cho đĩa nhựa bị nhấc lên ở ngay chỗ bàn-chân đạp lên các sợi vải, đĩa nhựa sẽ bị tách ra khỏi vành nhựa bên dưới.
 <br>Nếu làm theo cách thứ nhất không được thì chúng ta dùng một cây tuốc-nơ-vít dẹp dài cỡ hơn hai tấc, luồn đầu tuốc-nơ-vít vào khe giữa vành nhựa gắn giẻ-lau và đĩa nhựa rồi cạy cho chúng rời nhau. 
 <br>Việc gắn vành nhựa gắn giẻ-lau vào đĩa nhựa thì rất dễ, chỉ cần để vành nhựa trên mặt đất, đặt đĩa nhựa lên trên rồi ấn xuống bằng tay hoặc bằng chân là chúng khớp với nhau.</p>
+
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
+<h3>Cây-lau-nhà công-nghiệp</h3>
 <div class="flright"><amp-img alt="cây-lau-nhà công-nghiệp" src="/images/cay-lau-chu-nhat.webp" width="400" height="400" layout="responsive"></amp-img></div>
 <p>Ở các nơi công-cộng thì thường gặp cây-lau-nhà kiểu khác, được gọi là cây-lau-nhà công-nghiệp.
 <br>Kiểu này gắn miếng giẻ-lau hình-chữ-nhật, hai đầu giẻ-lau có thêm một lớp vải thứ hai tạo thành hai cái túi sâu khoảng tám phân. Mặt giẻ-lau có nhiều sợi vải ngắn trông giống đám san-hô nên kiểu dụng-cụ lau-nhà này còn được gọi là cây-lau-nhà san-hô. Cán cây-lau-nhà kiểu này gắn vào một miếng thép hình-chữ-nhật bằng hai khớp-bản-lề để nghiêng được đủ mọi hướng. Một miếng thép hình-chữ-nhật thứ hai nhỏ hơn gắn với miếng thép thứ nhất theo kiểu bản-lề.
@@ -307,6 +320,17 @@ data-ad-slot="5275186684">
 <br>Không chính-xác là một lỗi rất thường gặp ở các sản-phẩm thông-dụng ở Việt-Nam. Lời hướng-dẫn-sử-dụng trên được in trên nhãn của hai hiệu nước-lau-sàn của hai công-ty khác nhau, một công-ty đa-quốc-gia và một công-ty nội-địa, đây là trường-hợp copy bài của bạn 😄.</p>
 <p>Cái xô thông-dụng trong nhà, có thể dùng lau-nhà có dung-tích khoảng 20 lít. Như vậy, tạm cho là nhà-sản-xuất khuyên dùng một nắp đầy nước-lau-sàn với 10 lít nước. Thể-tích một nắp khoảng 50 ml.</p>
 <p>Hình-dáng cái xô ly-tâm dùng với cây-lau-nhà ly-tâm thì khác xô nước bình thường, nó giống như hai cái xô tròn dính vào nhau. Mỗi cái xô đó nhỏ hơn cái xô 20 lít một chút. Khi lấy nước-máy để lau-nhà với cái xô ly-tâm, tôi chỉ cho mực nước-máy cao khoảng năm phân, tính ra được khoảng năm lít nước và tôi dùng nửa nắp nước-lau-sàn cũng tạo ra nhiều bọt lắm, nếu cho nhiều nước-lau-sàn quá thì bọt tràn ra khỏi xô, nếu nắp nhỏ hơn thì dùng nhiều hơn nửa nắp nước-lau-sàn.</p>
+
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
 <h3 id="lau">Lau-nhà một lần</h3>
 <p><b>Tại-sao tôi chỉ dùng có năm lít nước để lau-nhà?</b>
 <br>Lượng nước đó vẫn còn dư khoảng một nửa sau khi thấm ướt giẻ-lau của năm cây-lau-nhà. Với cách lau-nhà tôi sắp viết ra dưới đây thì lượng nước còn dư lại trong xô sau khi thấm ướt các giẻ-lau sẽ không có tác-dụng làm sạch sàn-nhà. Nếu tôi dùng nhiều nước-máy hơn thì tôi phải pha nhiều nước-lau-sàn hơn theo tỷ-lệ, như vậy thì phí nước-lau-sàn, nước-lau-sàn đổ xuống cống nhiều hơn sẽ tốn nhiều công hơn để xử-lý.</p>
