--- a/kinh-nghiem/linh-tinh/nutrition.html
+++ b/kinh-nghiem/linh-tinh/nutrition.html
@@ -244,6 +244,17 @@ data-ad-slot="5275186684">
 </amp-iframe>
 <p>Các bạn có thể gửi thêm thông tin vào bảng bằng cách chụp hình bảng giá trị dinh dưỡng và barcode trên nhãn thực phẩm và gửi vào comment trong <a href="https://www.facebook.com/boi.hong.le/posts/4567814189977562" target='_blank'>Facebook</a>.</p>
 
+
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
 <p>Ngoài việc kiểm soát năng lượng đưa vào miệng, chúng ta còn cần phải cân bằng dinh dưỡng, nghĩa là ăn đủ chất đạm, chất xơ; không ăn quá nhiều chất béo, chất bột đường, và muối. Các chất dinh dưỡng không cân bằng cũng gây ra bệnh, vì vậy không thể giảm calorie sau khi nhậu nhiều rượu bia và mồi bằng cách giảm ăn cơm.
 <br>Dưới đây là khuyến cáo của Viện Dinh Dưỡng Quốc Gia về khẩu phần ở các độ tuổi từ nhỏ đến lớn.</p>
 <amp-google-document-embed
