--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -280,6 +280,17 @@ Hầu-hết các app gửi tin nhắn qua Internet khác đều có luôn tính-
   Các bài liên-quan:
   <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh-nghiệm khác</a>
   </div>
+
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
