--- a/kinh-nghiem/may-tinh/gnucash.html
+++ b/kinh-nghiem/may-tinh/gnucash.html
@@ -270,7 +270,7 @@ data-ad-slot="5275186684">
 Các bài liên quan:
 <br>* <a href="/huu-ich/chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
 <br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
-<br>* <a href="gnucash-dai-han">Ghi sổ các khoản đầu tư dài hạn</a>
+<br>* <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Ghi sổ các khoản đầu tư dài hạn</a>
 <br>* <a href="bat-dau-gnucash">Hướng dẫn bắt đầu dùng GnuCash</a>
 <br>* <a href="/kinh-nghiem/may-tinh/">Những kinh nghiệm khác</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133596398413393920" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376820392483575" rel="nofollow" target="_blank">Facebook</a></div>
