--- a/y-kien/quang-cao-lao.html
+++ b/y-kien/quang-cao-lao.html
@@ -281,6 +281,10 @@ Bấm vào chữ i nhỏ xíu trong vòng-tròn ở góc dưới bên trái khun
 <h2>Cách-báo-cáo khi thấy quảng-cáo trong Facebook</h2>
 <p>Trong Facebook cũng có rất nhiều quảng-cáo. Facebook không làm trung-gian như Google, Facebook nhận tiền từ người-quảng-cáo và đặt quảng-cáo trong Facebook. Facebook có một <a href="https://www.facebook.com/policies/ads/" target='_blank'>danh-sách cấm</a> còn dài hơn danh-sách của Google nữa, và cũng dùng máy để duyệt nên cũng sót. Tôi đã thấy một công-ty lừa-đảo mạo-danh đồng tiền Diem của Facebook đăng quảng-cáo trên Facebook 😃</p>
 <p>Để báo-cáo quảng-cáo vi-phạm trong Facebook mobile app cũng như trong browser thì bấm vào dấu <b>…</b> ở góc trên bên phải ô quảng-cáo rồi chọn mục báo-cáo.</p>
+<div class="todiscuss">
+Các bài liên quan:
+<br>* <a href="/y-kien/">Những ý kiến khác</a>
+</div>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
